<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Run Events</string>
    <string name="action_favorite">Save Event</string>
    <string name="content">image</string>
    <string name="title_activity_main">Run Events</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_event">Save Event</string>
    <string name="action_settings">Settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="signup">Did you sign up?</string>
    <string name="countdownques">Count down the days until the event?</string>
    <string name="whatk">5K or 10K</string>
    <string name="distance">Distance:</string>
    <string name="dateholder">MM/DD/YY</string>
    <string name="datetitle">Date:</string>
    <string name="addresshold">Event Address</string>
    <string name="address">Address:</string>
    <string name="eventTitle">Event Title</string>
    <string name="viewInfo"><![CDATA[View More Information &amp; Register]]></string>
    <string name="fivek">5K</string>
    <string name="tenk">10K</string>
    <string name="viewSaved">View Saved Events</string>
    <string name="saveit">Save</string>
    <string name="title_activity_sign_up_web">Sign Up</string>
    <string name="iRegistered">I\'ve Registered</string>
    <string name="title_activity_fav_page">Saved Events</string>
    <string name="title_activity_fav_page_cal">Saved Events</string>

</resources>
