<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.madgeek.devonaward.runevents.AddEvent">

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eventTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/address"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/addressTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addresshold"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:ellipsize="none"
        android:gravity="right"/>

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/datetitle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateholder"
        android:layout_alignParentRight="true"
        android:layout_marginTop="180dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/distanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/distance"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/distanceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/whatk"
        android:layout_alignParentRight="true"
        android:layout_marginTop="260dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/countDownTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/countdownques"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupYN1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/radioY"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginLeft="80dp"
        android:id="@+id/radioN" />
    </RadioGroup>

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signup"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupYN2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/radioY2"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginLeft="80dp"
            android:id="@+id/radioN2" />
    </RadioGroup>
</RelativeLayout>
