<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foot2"
    tools:context="com.madgeek.devonaward.runevents.EventDetails">


    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eventTitle"
        android:textColor="#081EC4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/address"
        android:layout_alignParentLeft="true"
        android:textColor="#35BD50"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/addressTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addresshold"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:ellipsize="none"
        android:gravity="right"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/datetitle"
        android:layout_alignParentLeft="true"
        android:textColor="#35BD50"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateholder"
        android:layout_alignParentRight="true"
        android:layout_marginTop="180dp"
        android:layout_marginRight="10dp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/distanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/distance"
        android:layout_alignParentLeft="true"
        android:textColor="#F0A400"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/distanceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/whatk"
        android:layout_alignParentRight="true"
        android:layout_marginTop="260dp"
        android:layout_marginRight="10dp"
        android:typeface="serif"/>

    <Button
        android:id="@+id/infoRegBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewInfo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:typeface="serif"/>


</RelativeLayout>
